报错/报错.txt
Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Os -freorder-blocks -fmacro-prefix-map=E:/Passport/espp4/sparepart/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/xiaozhi-esp32sp1=. -fmacro-prefix-map=E:/Passport/esp32/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fexceptions -fno-rtti -fuse-cxa-atexit -DESP_LCD_NV3023_VER_MAJOR=1 -DESP_LCD_NV3023_VER_MINOR=0 -DESP_LCD_NV3023_VER_PATCH=0 -DADC_BATTERY_ESTIMATION_VER_MAJOR=0 -DADC_BATTERY_ESTIMATION_VER_MINOR=2 -DADC_BATTERY_ESTIMATION_VER_PATCH=0 -DADC_MIC_VER_MAJOR=0 -DADC_MIC_VER_MINOR=2 -DADC_MIC_VER_PATCH=0 -DBUTTON_VER_MAJOR=4 -DBUTTON_VER_MINOR=1 -DBUTTON_VER_PATCH=3 -DESP_LCD_AXS15231B_VER_MAJOR=1 -DESP_LCD_AXS15231B_VER_MINOR=0 -DESP_LCD_AXS15231B_VER_PATCH=1 -DESP_LCD_GC9A01_VER_MAJOR=2 -DESP_LCD_GC9A01_VER_MINOR=0 -DESP_LCD_GC9A01_VER_PATCH=1 -DESP_LCD_ILI9341_VER_MAJOR=1 -DESP_LCD_ILI9341_VER_MINOR=2 -DESP_LCD_ILI9341_VER_PATCH=0 -DESP_LCD_JD9165_VER_MAJOR=1 -DESP_LCD_JD9165_VER_MINOR=0 -DESP_LCD_JD9165_VER_PATCH=2 -DESP_LCD_JD9365_VER_MAJOR=1 -DESP_LCD_JD9365_VER_MINOR=0 -DESP_LCD_JD9365_VER_PATCH=2 -DESP_LCD_PANEL_IO_ADDITIONS_VER_MAJOR=1 -DESP_LCD_PANEL_IO_ADDITIONS_VER_MINOR=0 -DESP_LCD_PANEL_IO_ADDITIONS_VER_PATCH=1 -DESP_LCD_SPD2010_VER_MAJOR=1 -DESP_LCD_SPD2010_VER_MINOR=0 -DESP_LCD_SPD2010_VER_PATCH=2 -DESP_LCD_ST7701_VER_MAJOR=1 -DESP_LCD_ST7701_VER_MINOR=1 -DESP_LCD_ST7701_VER_PATCH=3 -DESP_LCD_ST77916_VER_MAJOR=1 -DESP_LCD_ST77916_VER_MINOR=0 -DESP_LCD_ST77916_VER_PATCH=1 -DESP_LCD_ST7796_VER_MAJOR=1 -DESP_LCD_ST7796_VER_MINOR=3 -DESP_LCD_ST7796_VER_PATCH=2 -DESP_MMAP_ASSETS_VER_MAJOR=1 -DESP_MMAP_ASSETS_VER_MINOR=3 -DESP_MMAP_ASSETS_VER_PATCH=1 -DKNOB_VER_MAJOR=1 -DKNOB_VER_MINOR=0 -DKNOB_VER_PATCH=0 -DESP_LCD_JD9365_10_1_VER_MAJOR=1 -DESP_LCD_JD9365_10_1_VER_MINOR=0 -DESP_LCD_JD9365_10_1_VER_PATCH=3 -DESP_LCD_SH8601_VER_MAJOR=1 -DESP_LCD_SH8601_VER_MINOR=0 -DESP_LCD_SH8601_VER_PATCH=2 -DESP_LCD_ST7703_VER_MAJOR=1 -DESP_LCD_ST7703_VER_MINOR=0 -DESP_LCD_ST7703_VER_PATCH=3 -DI2C_BUS_VER_MAJOR=1 -DI2C_BUS_VER_MINOR=5 -DI2C_BUS_VER_PATCH=2 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/apps/image_display/ImageDisplay.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\apps\image_display\ImageDisplay.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/apps/image_display/ImageDisplay.cpp.obj -c E:/Passport/espp4/sparepart/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/xiaozhi-esp32sp1/main/apps/image_display/ImageDisplay.cpp     
E:/Passport/espp4/sparepart/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/xiaozhi-esp32sp1/main/apps/image_display/ImageDisplay.cpp: In function 'void video_playback_task(void*)':
E:/Passport/espp4/sparepart/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/xiaozhi-esp32sp1/main/apps/image_display/ImageDisplay.cpp:217:53: error: 'frame_start' was not declared in this scope
  217 |         int64_t frame_time = esp_timer_get_time() - frame_start;
      |                                                     ^~~~~~~~~~~
E:/Passport/espp4/sparepart/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/xiaozhi-esp32sp1/main/apps/image_display/ImageDisplay.cpp: At global scope:
E:/Passport/espp4/sparepart/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/xiaozhi-esp32sp1/main/apps/image_display/ImageDisplay.cpp:27:15: warning: 's_output_buf_size' defined but not used [-Wunused-variable]
   27 | static size_t s_output_buf_size = 0;
      |               ^~~~~~~~~~~~~~~~~
E:/Passport/espp4/sparepart/JC4880P443C_I_W/1-Demo/idf_examples/ESP-IDF/xiaozhi-esp32sp1/main/apps/image_display/ImageDisplay.cpp:26:17: warning: 's_output_buf' defined but not used [-Wunused-variable]
   26 | static uint8_t *s_output_buf = NULL;
      |                 ^~~~~~~~~~~~
[2019/2063] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/boards/common/afsk_demod.cc.obj
ninja: build stopped: subcommand failed.
